--- a/uDynamic/App_Plugins/CheckboxList/checkboxlist.html
+++ b/uDynamic/App_Plugins/CheckboxList/checkboxlist.html
@@ -5,7 +5,7 @@
         <li ng-show="!items.length">There is no items to display!</li>
 
         <li ng-repeat="item in items">
-            <input type="checkbox" value="{{item.key}}" ng-checked="model.value.indexOf(item.key) > -1" ng-click="changeVisibilityForSelection(item)">
+            <input type="checkbox" value="{{item.key}}" ng-checked="model.value.indexOf(item.key) > -1" ng-click="click(item)">
             {{item.text}}
         </li>
 
