Dropdown list property editors

--- a/uDynamic/App_Plugins/Prevalues/prevalues.html
+++ b/uDynamic/App_Plugins/Prevalues/prevalues.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="uDynamic.prevaluesController">
 
-    <table class="table table-striped table-responsive table-hover prevalusTable">
+    <table class="table table-striped table-responsive table-hover prevaluesTable">
         <thead>
             <tr>
                 <th>Text</th>
